--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h1>Hello World!</h1>
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>The HTML5 Herald</title>
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
+  <link rel="stylesheet" href="style.css">
+
+</head>
+
+<body>
+  <h1>Hello World!</h1>
+  <script src="js/scripts.js"></script>
+</body>
+</html>
