--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
 
   <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <meta name="description" content="Tuan Nguyen Personal website">
+  <meta name="author" content="Tuan Nguyen">
   <link rel="stylesheet" href="style.css">
 
 </head>
