--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
+  <title>Tuan Nguyen UI/UX - Front-end</title>
   <meta name="description" content="Tuan Nguyen Personal website">
   <meta name="author" content="Tuan Nguyen">
   <link rel="stylesheet" href="style.css">
