--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 
 <body>
   <h1>Hello World!</h1>
-  <script src="js/scripts.js"></script>
+<!--   <script src="js/scripts.js"></script> -->
 </body>
 </html>
