--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 </head>
 
 <body>
-  <h1>Hello World!</h1>
+<div id="wrapper">
+  <div id="alphabet">
+    <p class="char capitalize" id="cap"></p>
+    <p class="char regular" id="reg"></p>
+  </div>
+  <button class="btn btn-lg btn-primary" id="random">Random</button>
+</div>
 <!--   <script src="js/scripts.js"></script> -->
 </body>
 </html>
