--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
   </div>
   <button class="btn btn-lg btn-primary" id="random">Random</button>
 </div>
-<!--   <script src="js/scripts.js"></script> -->
+  <script src="scripts.js"></script>
 </body>
 </html>
