--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div id="wrapper">
+    <div class="container" id="wrapper">
       <div id="alphabet">
         <p class="char capitalize" id="cap"></p>
         <p class="char regular" id="reg"></p>
