--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       </div>
       <button class="btn btn-lg btn-primary" id="random">Random</button>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
