--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   </head>
   <body>
     <div class="container" id="wrapper">
-      <div id="alphabet">
-        <p class="char capitalize" id="cap"></p>
-        <p class="char regular" id="reg"></p>
+      <div class="card" id="alphabet">
+        <div class="card-body d-flex">
+          <p class="char capitalize" id="cap"></p>
+          <p class="char regular" id="reg"></p>
+        </div>
       </div>
       <button class="btn btn-lg btn-primary" id="random">Random</button>
     </div>
